# Uitnodigingsregel

./: .dockerignore  .gitignore  Makefile  Model_analysis.qmd  README.md  config.yaml  environment.yml  main.ipynb  main.py  main_direct.ipynb  main_testfile.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
Module/: dataset.py  plots.py
Uitnodigingsregel/: LICENSE  Makefile  README.md  environment.yml  main_testfile.ipynb  pyproject.toml
Uitnodigingsregel/Module/: __init__.py  config.py  dataset.py  features.py  plots.py
Uitnodigingsregel/Module/modeling/: predict.ipynb  predict.py  train.py
Uitnodigingsregel/data/interim/: synth_data_pred.csv  synth_data_train.csv
Uitnodigingsregel/data/processed/: ranked_students_rf.csv
Uitnodigingsregel/data/raw/: raw_data.csv.xlsx  synth_data_train.csv
Uitnodigingsregel/data/raw/user_data/: pred.csv
Uitnodigingsregel/docs/: mkdocs.yml
Uitnodigingsregel/docs/docs/: index.md
Uitnodigingsregel/models/: random_forest_regressor.joblib
Uitnodigingsregel/notebooks/: 0_Data_requirements.qmd  1_Data_check.qmd  2.0-mm-initial-data-processing.ipynb
data/interim/: pred_data_standardized.csv  train_data_standardized.csv
data/processed/: .gitignore  pred_processed.csv  ranked_students_rf.csv  train_processed.csv
models/: lasso_regression.joblib  random_forest_regressor.joblib  support_vector_machine.joblib
module/: config.py  dataset.py  features.ipynb  features.py  plot.py  settings.py
odule/: dataset.py  features.ipynb  features.py
reports/: model_evaluation.txt  model_summary_table.txt  threshold_analysis.txt
(+24 files in other folders)
