[project]
name = "uitnodigingsregel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datetime>=5.5",
    "joblib>=1.4.2",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "matplotlib>=3.8.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.0",
    "tqdm>=4.67.1",
    "typer>=0.15.1",
    "xlsxwriter>=3.2.2",
]
